# rif

./: .codecov.yml  .gitignore  .travis.yml  .travis.yml.pybind11-based  CMakeLists.txt  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  README.txt  TODO.txt  environment.yml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
_TODO/: transformations.py
_TODO/fordas_dtype_stuff/: nonpod_dtype_support.h  notes.txt  std_array_dtype_support.h
_TODO/fordas_streambuf/: .gitignore  CMakeLists.txt  ostream_example.cpp  pystreambuf.h  test_ostream_example.py
apps/: cyclic_cyclic_dock.py  numpy_experiments.py
apps/examples/pyrosetta/: 170407_david_rbsample.py
data/orientations/karney/: ExpandSet.cpp
devtools/: build_and_run_gtest_wip.py  build_and_run_pytest.py  build_docs_html.py  build_utils.py  cmake_build_and_run_pytest.py  cp_filtered.py  pathtest.py  run_pytest.py  run_remote.py  sourcegen.py
docs/: Doxyfile  changelog.rst  conf.py  contributing_include.rst  environment.yml  examples.rst  index.rst  intro.rst  legacy.rst  readme_include.rst  rif.rst  rif_module_docs.rst  riflib.rst
docs/apidoc/: _rif._index.rst  modules.rst  rif.actor.rst  rif.apps.examples.pyrosetta.rst  rif.apps.examples.rst  rif.apps.rst  rif.chem.rst  rif.data.rst  rif.geom.rst  rif.hash.rst  rif.index.rst  rif.io.rst  rif.kinematics.rst  rif.legacy.rst  rif.numeric.rst  rif.rcl.rst  rif.rotamer.rst  rif.rst  rif.sampling.rst  rif.sele.rst  rif.test.rst  rif.util.rst  rif.visual.datavis.rst  rif.visual.rst
docs/data/: notes.txt
docs/ipynb/: numpy_annotated_coords.ipynb  pandas_vs_xarray_dpyte.ipynb
docs/legacy/: rifdock_fz7_v4.flags  rifdock_v4_ads.flags  rifgen_fz7_v4.flags  rifgen_v4_ads.flags
ide/: rif.sublime-project  riflib.sublime-project
jigs/: build_and_run_gtest_wip.py  build_docs_html.py  build_utils.py  cmake_build_and_run_pytest.py  cp_filtered.py  gen__init__.py  pybind_source_gen.py
log/: TODO.txt  notes.txt
src/: __init__.py  conftest.py  rif.gen.cpp  rif.gen.cpp.jinja  riflib.gen.cpp  riflib.gen.cpp.jinja  riflib.pybind.cpp  sourcegen.py  test.pybind.cpp  types.hpp
src/actor/: ActorConcept.hpp  ActorConcept_io.hpp  Atom.hpp  BackboneActor.gtest.cpp  BackboneActor.hpp  RIFActor.hpp  VoxelActor.hpp
src/chem/: AtomData.hpp  RotamerIndex.hpp  __init__.py  biochem.py  ligand_factory.gtest.cpp  ligand_factory.hpp  ligand_factory.lib.cpp  stub.gtest.cpp  stub.hpp
src/chemical/: AtomData.hpp  RotamerIndex.hpp  biochem.py  ligand_factory.gtest.cpp  ligand_factory.hpp  ligand_factory.lib.cpp  stub.gtest.cpp  stub.hpp
src/datagen/: rosetta_scores.py
src/dock/: fftdock.hpp
src/io/: cache.hpp  dump_pdb_atom.gtest.cpp  dump_pdb_atom.hpp
src/kinematics/: Director.gtest.cpp  Director.hpp  Scene.gtest.cpp  Scene.hpp  SceneBase.hpp  SceneIterator.gtest.cpp  SceneIterator.hpp  Scene_io.hpp  Scene_test_eigen.gtest.cpp  Scene_test_objective.gtest.cpp
src/nest/: MultiNEST.gtest.cpp  MultiNest.hpp  NEST.gtest.cpp  NEST.hpp  NEST_concepts.hpp  NEST_neighbor.gtest.cpp  NEST_test_util.hpp
src/nest/pmap/: DiscreteChoiceMap.hpp  EulerAnglesMap.gtest.cpp  EulerAnglesMap.hpp  HecatonicosachoronMap.gtest.cpp  HecatonicosachoronMap.hpp  OriTransMap.gtest.cpp  OriTransMap.hpp  QuaternionMap.gtest.cpp  QuaternionMap.hpp  Rotation1DMap.gtest.cpp  Rotation1DMap.hpp  ScaleMap.hpp  SphereDodec.gtest.cpp  SphereDodec.hpp  SphereQuad.gtest.cpp  SphereQuad.hpp  TetracontoctachoronMap.gtest.cpp  TetracontoctachoronMap.hpp  UnitMap.hpp  parameter_maps.gtest.cpp  parameter_maps_test_nbrcell.gtest.cpp
src/numeric/: FixedPoint.gtest.cpp  FixedPoint.hpp  X1dim.hpp  __init__.py  bcc_lattice.gtest.cpp  bcc_lattice.hpp  bcc_lattice_orientation.gtest.cpp  cube_to_sphere.gtest.cpp  cube_to_sphere.hpp  eigen_xform_perf.gtest.cpp  euler_angles.gtest.cpp  euler_angles.hpp  geom_4d.gtest.cpp  geom_4d.hpp  pigen.py  pigen.pybind.cpp  rand_xform.gtest.cpp  rand_xform.hpp  util.hpp
src/objective/: ObjectiveFunction.gtest.cpp  ObjectiveFunction.hpp  ObjectiveFunction_io.hpp  ObjectiveVisitor.hpp
src/objective/hash/: XformHash.gtest.cpp  XformHash.hpp  XformHashFromNest.gtest.cpp  XformHashFromNest.hpp  (+4 more)
src/pigen/: pigen.pybind.cpp
src/pyutil/: conversions.hpp  nonpod_dtype_support.h  pybind_dtype_offset.hpp  pybind_numpy.hpp  pybind_simplearray.hpp
src/rif/: __init__.py  conftest.py  do_not_package.yml  dtypes.py  dtypes.pybind.cpp  dtypes_test.py  eigen_types.gtest.cpp  eigen_types.hpp  eigen_types.py  eigen_types.pybind.cpp  eigen_types_test.py  global_rng.hpp  homo.py  homo_test.py  homog.py  homog_test.py  rif.gen.cpp.jinja  sele.py  sele_test.py  sym.py  sym_test.py  types.hpp
src/riflib/: riflib.pybind.cpp  test.pybind.cpp
src/rosetta/: atype_map.hpp  atype_map.lib.cpp
src/sampling/: __init__.py  orientations.gtest.cpp  orientations.hpp  orientations.py  orientations.pybind.cpp
src/search/: HackPack.gtest.cpp  HackPack.hpp  SpatialBandB.gtest.cpp  SpatialBandB.hpp
src/test/: __init__.py  example.py  example.pybind.cpp  gtest_all.cc  gtest_all.cpp  gtest_util.hh  gtest_util.hpp  gtest_wip.cc  gtest_wip.cpp  test_numpy.py  test_numpy.pybind.cpp  vectorization_test.cc  vectorization_test.cpp
src/util/: SimpleArray.gtest.cpp  SimpleArray.hpp  StoragePolicy.gtest.cpp  StoragePolicy.hpp  Timer.hpp  assert.hpp  bloom.gtest.cpp  dilated_int.gtest.cpp  dilated_int.hpp  hash.gtest.cpp  hash_thread.gtest.cpp  rcl.py  str.hpp  template_loop.gtest.cpp  template_loop.hpp  template_math.hpp
src/visual/: vispymol.py
src/visualize/: vispymol.py
tests/: conftest.py  pytest_discovery_test.py  test_biochem.py  test_hypothesis.py  test_karney.py  test_numpy.py  test_pigen.py  test_rcl.py  test_riflib_import.py  test_scene.py  test_visual.py
tools/: build_and_run_gtest_auto.py  build_and_run_gtest_wip.py  build_and_run_pytest.py  build_and_test.py  build_docs_html.py  build_utils.py  build_utils.sh  clean.py  cmake_build_and_run_pytest.py  cp_filtered.py  empty.cpp.tplt  gen__init__.py  print_env.py  print_path.py  pybind_source_gen.py  sloc.sh
tools/cicd/: docker_build_rif_wheel.sh
(+689 files in other folders)
